--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <title>Company</title>
     <link rel="stylesheet" href="./css/assetsmin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="js/scripts.js" defer></script>
@@ -12,8 +12,7 @@
     <header>
         <div class="navbar-container">
             <nav>
-                <a href=".">
-                    <img src="./img/Skol.png" alt="logomarca" id="logomarca"></a>
+                <h3 id="logomarca">LOGOMARK</h3>
                 <ul class="navbar-items">
                     <li>
                         <a href="#">Home</a>
@@ -25,7 +24,7 @@
                         <a href="#">Support</a>
                     </li>
                     <li>
-                        <a href="#" class="default-btn">Entrar</a>
+                        <a href="./LOGIN/Login.html" class="default-btn">Login</a>
                     </li>
                 </ul>
             </nav>
@@ -59,21 +58,27 @@
             </li>
         </ul>
     </section>
-    <aside>
+    <section>
         <div class="message-container">
             <figure>
                 <img id="cat-svg" src="./img/cat-svg.svg" alt="cat-svg">
             </figure>
             <h3 id="message-title">Deixe-nos uma mensagem!</h3>
             <form class="form-container">
-                <input type="text" placeholder="Nome" id="name" required>
+                <input type="text" placeholder="Nome" id="name">
                     
-                <input type="email" placeholder="example@gmail.com" required>
+                <input type="email" placeholder="example@gmail.com">
                     
-                <textarea id="message" cols="30" rows="10" placeholder="Muito bom!" required></textarea>
+                <textarea id="message" cols="30" rows="10" placeholder="Muito bom!"></textarea>
                 <input type="submit" id="btn">
             </form>
         </div>
-    </aside>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
