--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Contacts</a>
+                        <a href="#">Contatos</a>
                     </li>
                     <li>
-                        <a href="#">Support</a>
+                        <a href="#">Suporte</a>
                     </li>
                     <li>
                         <a href="./LOGIN/Login.html" class="default-btn">Login</a>
@@ -36,7 +36,7 @@
             
             <img id="main-svg" src="./img/floating.svg" alt="main-svg">
 
-            <img src="./img/titulo.svg" id="text-aside" alt="text-svg">
+            <img src="./img/Venha-para-o-futuro.svg" id="text-aside" alt="text-svg">
         </div>
     </aside>
     <section class="services-container">
