--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar-container">
             <nav>
-                <h3 id="logomarca">LOGOMARK</h3>
+                <a href=""><h3 id="logomarca">LOGOMARK</h3></a>
                 <ul class="navbar-items">
                     <li>
                         <a href="#">Home</a>
@@ -23,8 +23,8 @@
                     <li>
                         <a href="#">Suporte</a>
                     </li>
-                    <li>
-                        <a href="./LOGIN/Login.html" class="default-btn">Login</a>
+                    <li id="navbar-btn">
+                        <a href="./LOGIN/Login.html" class="default-btn">Entrar</a>
                     </li>
                 </ul>
             </nav>
@@ -32,7 +32,7 @@
     </header>
     <aside>
         <div class="aside-container">
-            <img src="./img/Skol-blue.png" alt="logomarca" id="logomarca-aside">
+            <h3 id="logomarca-aside">LOGOMARK</h3>
             
             <img id="main-svg" src="./img/floating.svg" alt="main-svg">
 
