--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href=""><h3 id="logomarca">LOGOMARK</h3></a>
                 <ul class="navbar-items">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#">Início</a>
                     </li>
                     <li>
                         <a href="#">Contatos</a>
@@ -72,7 +72,7 @@
                     </div>    
                     <div class="email-input">
                         <p class="email-icon"><i class="fa-solid fa-envelope"></i></p>
-                        <input type="email" placeholder="example@gmail.com">
+                        <input type="email" placeholder="exemplo@gmail.com">
                     </div>  
                 </div>
                 <textarea id="message" cols="30" rows="10" placeholder="Muito bom!"></textarea>
