--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>  
                 </div>
                 <textarea id="message" cols="30" rows="10" placeholder="Muito bom!"></textarea>
-                <input type="submit" id="btn">
+                <input type="submit" id="btn-submit">
             </form>
         </div>
     </section>
