--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>    
                     <div class="email-input">
                         <p class="email-icon"><i class="fa-solid fa-envelope"></i></p>
-                        <input type="email" placeholder="exemplo@gmail.com">
+                        <input type="email" placeholder="exemplo@gmail.com" id="email">
                     </div>  
                 </div>
                 <textarea id="message" cols="30" rows="10" placeholder="Muito bom!"></textarea>
